--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title> FAQ for @CLATOrgy </title>
-    <!-- PNG favicon --> https://imgur.com/a/HQqFlPe
+    <!-- PNG favicon -->
     <link rel="icon" type="image/png" href="https://imgur.com/a/HQqFlPe">
     <!-- Main CSS file and normalize.css (https://github.com/necolas/normalize.css/) or reset of your preference  -->
     <link rel="stylesheet" href="css/normalize.css">
