--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <title> FAQ for @CLATOrgy </title>
     <!-- PNG favicon -->
-    <link rel="icon" type="image/png" href="https://imgur.com/a/HQqFlPe">
+    <link rel="icon" type="ico" href="https://mega.nz/file/rSYUVJqQ#LHFxoL-IM_VfFaCEr_srdrlQY6pCU3PoLuSgiTqCFy0">
     <!-- Main CSS file and normalize.css (https://github.com/necolas/normalize.css/) or reset of your preference  -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
